<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gurken2"
    android:orientation="vertical"


    tools:context="com.example.paul.myapplication.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/cookingaid6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        >

        <Button
            android:id="@+id/zufall"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/zufall"
       />

        <Button
            android:id="@+id/suche_nach_rezept"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:text="@string/suche_nach_rezept"
            />

        <Button
            android:id="@+id/suche_durch_lebensmittel"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/suche_durch_lebensmittel"
         />

        <Button
            android:id="@+id/einkaufszettel"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/einkaufszettel"
 />

        <Button
            android:id="@+id/erstellen"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/erstellen"

         />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

    <Button
        android:id="@+id/infoHilfe"
        style="@style/ButtonStyleHilfe"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_alignParentRight="true"

        />

    <Button
        android:id="@+id/einstellungen"
        style="@style/ButtonStyleEinstellungen"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"

        />


    </RelativeLayout>



</LinearLayout>
