<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bild"
    >


            <TextView
                android:id="@+id/einstellungen"
                android:text="@string/einstellungen"
                style="@style/ueberschriften_norm"
            />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:background="@drawable/schrifthintergrund_style"
                >

            <TextView
                android:id="@+id/einstellungen_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/einstellungenText"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"

            >

            <Button
                android:id="@+id/zurueck"
                style="@style/ButtonStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/zurueck"
                android:layout_marginTop="8dp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"


                />


        </LinearLayout>


</LinearLayout>
