<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/tomate4"
        >

        <TextView
            android:id="@+id/infoHilfe"
            android:text="@string/einkaufsliste"
            style="@style/ueberschriften_norm"/>


        <ExpandableListView
            android:id="@+id/ekListe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#FFF"
            android:dividerHeight="1dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="240dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >

            <Button
                android:id="@+id/einkaufsliste_erstellen"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/einkaufsliste_erstellen"
                android:layout_marginBottom="12dp"/>

            <Button
                android:id="@+id/zur"
                style="@style/ButtonStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/zurueck"
                android:layout_marginBottom="12dp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                />




        </LinearLayout>


    </LinearLayout>

</ScrollView>

